@@ -1,78 +1,0 @@
-#!/usr/bin/env python
-# -*- coding: UTF-8 -*-
-# generated by wxGlade 0.4cvs on Fri Oct 14 23:05:52 2005
-
-import wx
-
-class popStatDialog(wx.Dialog):
-    def __init__(self, *args, **kwds):
-        # begin wxGlade: popStatDialog.__init__
-        kwds["style"] = wx.DEFAULT_DIALOG_STYLE|wx.RESIZE_BORDER|wx.MAXIMIZE_BOX|wx.MINIMIZE_BOX|wx.THICK_FRAME
-        wx.Dialog.__init__(self, *args, **kwds)
-        self.notebook_1 = wx.Notebook(self, -1, style=0)
-        self.notebook_1_pane_2 = wx.Panel(self.notebook_1, -1)
-        self.panel_popProperty = wx.ScrolledWindow(self.notebook_1, -1, style=wx.TAB_TRAVERSAL)
-        self.text_popFIleName = wx.TextCtrl(self, -1, "")
-        self.button_1 = wx.Button(self, -1, "loadPop", style=wx.BU_RIGHT)
-        self.text_popProperty = wx.TextCtrl(self.panel_popProperty, -1, "", style=wx.TE_MULTILINE|wx.TE_READONLY|wx.HSCROLL|wx.TE_RICH|wx.TE_WORDWRAP)
-        self.tree_ctrl_1 = wx.TreeCtrl(self.notebook_1_pane_2, -1, style=wx.TR_HAS_BUTTONS|wx.TR_DEFAULT_STYLE|wx.SUNKEN_BORDER)
-        self.text_ctrl_1 = wx.TextCtrl(self.notebook_1_pane_2, -1, "", style=wx.TE_MULTILINE|wx.TE_RICH)
-
-        self.__set_properties()
-        self.__do_layout()
-        # end wxGlade
-
-    def __set_properties(self):
-        # begin wxGlade: popStatDialog.__set_properties
-        self.SetTitle("Population statistics")
-        self.text_popFIleName.SetMinSize((120, 25))
-        self.text_popFIleName.SetToolTipString("Population file name")
-        self.panel_popProperty.SetScrollRate(10, 10)
-        # end wxGlade
-
-    def __do_layout(self):
-        # begin wxGlade: popStatDialog.__do_layout
-        sizer_2 = wx.FlexGridSizer(2, 1, 0, 0)
-        sizer_4 = wx.BoxSizer(wx.HORIZONTAL)
-        sizer_3 = wx.BoxSizer(wx.HORIZONTAL)
-        topSizer = wx.BoxSizer(wx.HORIZONTAL)
-        topSizer.Add(self.text_popFIleName, 0, wx.ALL|wx.ADJUST_MINSIZE, 0)
-        topSizer.Add(self.button_1, 0, wx.ALL|wx.ADJUST_MINSIZE, 0)
-        sizer_2.Add(topSizer, 1, wx.ALL|wx.EXPAND|wx.ADJUST_MINSIZE, 0)
-        sizer_3.Add(self.text_popProperty, 0, wx.ALL|wx.EXPAND, 0)
-        self.panel_popProperty.SetAutoLayout(True)
-        self.panel_popProperty.SetSizer(sizer_3)
-        sizer_3.Fit(self.panel_popProperty)
-        sizer_3.SetSizeHints(self.panel_popProperty)
-        sizer_4.Add(self.tree_ctrl_1, 1, wx.EXPAND, 0)
-        sizer_4.Add(self.text_ctrl_1, 0, wx.ALL|wx.ADJUST_MINSIZE, 0)
-        self.notebook_1_pane_2.SetAutoLayout(True)
-        self.notebook_1_pane_2.SetSizer(sizer_4)
-        sizer_4.Fit(self.notebook_1_pane_2)
-        sizer_4.SetSizeHints(self.notebook_1_pane_2)
-        self.notebook_1.AddPage(self.panel_popProperty, "Property")
-        self.notebook_1.AddPage(self.notebook_1_pane_2, "Statistics")
-        sizer_2.Add(self.notebook_1, 1, wx.EXPAND, 0)
-        self.SetAutoLayout(True)
-        self.SetSizer(sizer_2)
-        sizer_2.Fit(self)
-        sizer_2.SetSizeHints(self)
-        self.Layout()
-        # end wxGlade
-
-# end of class popStatDialog
-
-
-class popStatApp(wx.App):
-    def OnInit(self):
-        wx.InitAllImageHandlers()
-        dlg = popStatDialog(None, -1, "")
-        self.SetTopWindow(dlg)
-        dlg.Show()
-        return 1
-
-# end of class popStatApp
-
-if __name__ == "__main__":
-    app = popStatApp(0)
-    app.MainLoop()
